--- a/app_config.yaml
+++ b/app_config.yaml
@@ -3,14 +3,17 @@ about:
   date: '2022-08-13'
 
 files:
+#Correct File
   - filepath: c:/Users/mickh/OneDrive/01_Developer/02_Python/louder-data-eng-task/example1.csv
+
+#Incorrect Test File that is not of type csv
   - filepath: c:/Users/mickh/OneDrive/01_Developer/02_Python/louder-data-eng-task/example2.txt
+
+#Incorrect Test File Missing "Reporting Fields"
   - filepath: c:/Users/mickh/OneDrive/01_Developer/02_Python/louder-data-eng-task/example3.csv
+
+#Incorrect Test File Missing "Grand Total"
   - filepath: c:/Users/mickh/OneDrive/01_Developer/02_Python/louder-data-eng-task/example4.csv
+
+#Incorrect Test File Missing "Account ID"
   - filepath: c:/Users/mickh/OneDrive/01_Developer/02_Python/louder-data-eng-task/example5.csv
-
-
-# Several types of Campaign Manager reports in use
-# the number of header rows in a report varies dependant on the report criteria --> Header looks to come after: Report Fields
-# the number and order of columns in the report are depend on the report definition
-# fields with containing currency values will include the word Cost in the column heading
